grub: set gfxmode to the splash picture size and re-enable gfxpayload=keep
Signed-off-by: Jed <lejosnej@ainfosec.com>

--- a/recipes-openxt/xenclient/xenclient-dom0-tweaks/grub.cfg
+++ b/recipes-openxt/xenclient/xenclient-dom0-tweaks/grub.cfg
@@ -5,8 +5,8 @@ set root=lvm/xenclient-boot
 
 insmod font
 if loadfont /grub/unifont.pf2 ; then
-  set gfxmode=auto
-#  set gfxpayload="keep"
+  set gfxmode="1024x768"
+  set gfxpayload="keep"
   insmod gfxterm
   insmod vbe
   terminal_output gfxterm
