[rsyslog] Upgrade to follow OE revision
Upgrading addresses a couple of CVEs.
Also cleanup the configuration files.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

OXT-670

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -53,5 +53,7 @@ PREFERRED_PROVIDER_virtual/java-initial-native = "cacao-initial-native"
 PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 
+PREFERRED_VERSION_rsyslog = "7%"
+
 # Set our root home
 ROOT_HOME = "/root"
