--- a/recipes-extended/rsyslog/files/xenclient-dom0/rsyslog.conf
+++ b/recipes-extended/rsyslog/files/xenclient-dom0/rsyslog.conf
@@ -9,93 +9,27 @@
 
 $ModLoad imuxsock # provides support for local system logging
 $ModLoad imklog   # provides kernel logging support (previously done by rklogd)
-#$ModLoad immark  # provides --MARK-- message capability
-
-# provides UDP syslog reception
-#$ModLoad imudp
-#$UDPServerRun 514
-
-# provides TCP syslog reception
-#$ModLoad imtcp
-#$InputTCPServerRun 514
-
 
 ###########################
 #### GLOBAL DIRECTIVES ####
 ###########################
+# Time format
+$template oxt_format,"%TIMESTAMP%.%TIMESTAMP:::date-subseconds% %syslogtag%%msg%\n"
+$ActionFileDefaultTemplate oxt_format
 
-#
-# Use traditional timestamp format.
-# To enable high precision timestamps, comment out the following line.
-#
-# $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
-$template xc_format,"%TIMESTAMP%.%TIMESTAMP:::date-subseconds% %syslogtag%%msg%\n"
-$ActionFileDefaultTemplate xc_format
-
-#
 # Set the default permissions for all log files.
-#
 $FileOwner root
 $FileGroup root
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
 
-#
-# Include all config files in /etc/rsyslog.d/
-#
-$IncludeConfig /etc/rsyslog.d/*.conf
-
-
 ###############
 #### RULES ####
 ###############
-
-#
-# First some standard log files.  Log by facility.
-#
-# auth,authpriv.*			/var/log/auth.log
-# *.*;auth,authpriv.none		-/var/log/syslog
-#cron.*                                 /var/log/cron.log
-# daemon.*                              -/var/log/daemon.log
-# kern.*				-/var/log/kern.log
-# lpr.*                                 -/var/log/lpr.log
-# mail.*				-/var/log/mail.log
-# user.*				-/var/log/user.log
-
-#
-# Some "catch-all" log files.
-#
-# *.=debug;\
-# 	auth,authpriv.none;\
-# 	news.none;mail.none	-/var/log/debug
-# *.=info;*.=notice;*.=warn;\
-# 	auth,authpriv.none;\
-# 	cron,daemon.none;\
-# 	mail,news.none		-/var/log/messages
-
-#
 # Send everything that is not debug to /var/log/messages
-# Creates an "out_channel" which calls logrotate tool once /var/log/messages exceed 20Mb.
-#
-$outchannel log_rotation,/var/log/messages,20971520,/sbin/logrotate-wrapper
-if $syslogseverity <= 6 or $programname != 'surfman' then $log_rotation
+$outchannel log_rotation,/var/log/messages,20971520,/usr/sbin/logrotate-wrapper
+if $syslogseverity <= 6 then    :omfile:$log_rotation
 
-#
-# Since some people are interested in debug logs, here is an example how to recover
-# debug logs from surfman in a different file.
-#
-#if $programname == 'surfman' and $syslogseverity > 6 then /storage/surfman.debug
-
-#
 # Emergencies are sent to everybody logged in.
-#
-*.emerg				*
-
-#
-# console is usually leave idle.
-#
-#daemon,mail.*;\
-#	news.=crit;news.=err;news.=notice;\
-#	*.=debug;*.=info;\
-#	*.=notice;*.=warn	/dev/tty8
+*.emerg				:omusrmsg:*
