--- a/recipes-extended/rsyslog/files/xenclient-syncvm/rsyslog.conf
+++ b/recipes-extended/rsyslog/files/xenclient-syncvm/rsyslog.conf
@@ -9,84 +9,26 @@
 
 $ModLoad imuxsock # provides support for local system logging
 $ModLoad imklog   # provides kernel logging support (previously done by rklogd)
-#$ModLoad immark  # provides --MARK-- message capability
-
-# provides UDP syslog reception
-#$ModLoad imudp
-#$UDPServerRun 514
-
-# provides TCP syslog reception
-#$ModLoad imtcp
-#$InputTCPServerRun 514
-
 
 ###########################
 #### GLOBAL DIRECTIVES ####
 ###########################
-
-#
-# Light format for service vms logging in hvc0 read by dom0's rsyslog.
-#
+# Light format for service VMs logging in hvc0 (read by dom0's rsyslog)
 $template SyslFormat,"%programname%:%msg:::sp-if-no-1st-sp%%msg%\n"
 $ActionFileDefaultTemplate SyslFormat
 
-#
 # Set the default permissions for all log files.
-#
 $FileOwner root
 $FileGroup root
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
 
-#
-# Include all config files in /etc/rsyslog.d/
-#
-$IncludeConfig /etc/rsyslog.d/*.conf
-
-
 ###############
 #### RULES ####
 ###############
+# Send everything to /dev/hvc0
+*.*                             :omfile:/dev/hvc0
 
-#
-# First some standard log files.  Log by facility.
-#
-# auth,authpriv.*			/var/log/auth.log
-# *.*;auth,authpriv.none		-/var/log/syslog
-#cron.*                                 /var/log/cron.log
-# daemon.*                              -/var/log/daemon.log
-# kern.*				-/var/log/kern.log
-# lpr.*                                 -/var/log/lpr.log
-# mail.*				-/var/log/mail.log
-# user.*				-/var/log/user.log
-
-#
-# Some "catch-all" log files.
-#
-# *.=debug;\
-# 	auth,authpriv.none;\
-# 	news.none;mail.none	-/var/log/debug
-# *.=info;*.=notice;*.=warn;\
-# 	auth,authpriv.none;\
-# 	cron,daemon.none;\
-# 	mail,news.none		-/var/log/messages
-
-#
-# Send everything to /var/log/messages
-# Creates an "out_channel" which calls logrotate tool once /var/log/messages exceed 20Mb.
-#
-*.*                             /dev/hvc0
-
-#
 # Emergencies are sent to everybody logged in.
-#
-*.emerg				*
-
-#
-# console is usually leave idle.
-#
-#daemon,mail.*;\
-#	news.=crit;news.=err;news.=notice;\
-#	*.=debug;*.=info;\
-#	*.=notice;*.=warn	/dev/tty8
+*.emerg				:omusrmsg:*
