[grub.cfg] add intel-microcode and ucode= argument
Have Xen load the microcode from /boot.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

OXT-709

--- a/recipes-openxt/xenclient/xenclient-dom0-tweaks/grub.cfg
+++ b/recipes-openxt/xenclient/xenclient-dom0-tweaks/grub.cfg
@@ -30,7 +30,7 @@ else
 fi
 
 TBOOT_COMMON_CMD="min_ram=0x2000000 loglvl=all serial=115200,8n1,0x3f8 logging=serial,memory"
-XEN_COMMON_CMD="console=com1 dom0_mem=min:320M,max:320M,320M com1=115200,8n1,pci mbi-video vga=current flask_enforcing=1 loglvl=debug guest_loglvl=debug smap=0"
+XEN_COMMON_CMD="console=com1 dom0_mem=min:320M,max:320M,320M com1=115200,8n1,pci mbi-video vga=current flask_enforcing=1 loglvl=debug guest_loglvl=debug smap=0 ucode=-2"
 LINUX_COMMON_CMD="console=hvc0 root=/dev/mapper/xenclient-root ro boot=/dev/mapper/xenclient-boot swiotlb=16384 xen_pciback.passthrough=1 consoleblank=0 video.delay_init=1 vt.global_cursor_default=0 rootfstype=ext3 bootfstype=ext3"
 
 menuentry "XenClient: Normal" {
@@ -51,6 +51,8 @@ menuentry "XenClient: Normal" {
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+# This module should remain here or Xen's command line has to be updated with ucode=<index> (currently ucode=-2)
+        module /boot/microcode-intel.bin
 # not ELF - causes module alignment problems
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
@@ -73,6 +75,7 @@ menuentry "XenClient Technical Support Option: Safe graphics" {
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
 menuentry "XenClient Technical Support Option: Safe Mode (no autostart of VMs)" {
@@ -93,6 +96,7 @@ menuentry "XenClient Technical Support Option: Safe Mode (no autostart of VMs)" 
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
 
@@ -114,6 +118,7 @@ menuentry "XenClient Technical Support Option: Safe Mode with AMT serial" {
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
 
@@ -135,6 +140,7 @@ menuentry "XenClient Technical Support Option: Normal Mode with synchronised con
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
 
@@ -156,6 +162,7 @@ menuentry "XenClient Technical Support Option: console access" {
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
 
@@ -177,5 +184,6 @@ menuentry "XenClient Technical Support Option: console access with AMT serial" {
         module /boot/4th_gen_i5_i7_SINIT_75.BIN
         module /boot/5th_gen_i5_i7_SINIT_79.BIN
         module /boot/6th_gen_i5_i7_SINIT_71.BIN
+        module /boot/microcode-intel.bin
         module /etc/xen/xenrefpolicy/policy/policy.24
 }
