layer: Amend layerinfo.
Name the layer appropriately and define version.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,13 +12,15 @@ BBFILES += " \
     ${LAYERDIR}/recipes-*/*/*/*.bbappend \
 "
 
-BBFILE_COLLECTIONS += "oe-layer"
-BBFILE_PATTERN_oe-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_oe-layer = "9"
+BBFILE_COLLECTIONS += "xenclient-oe"
+BBFILE_PATTERN_xenclient-oe := "^${LAYERDIR}/"
+BBFILE_PRIORITY_xenclient-oe = "9"
+
+LAYERVERSION_xenclient-oe = "1"
 
 LICENSE_PATH += " ${LAYERDIR}/files/additional-licenses/"
 
-LAYERDEPENDS_oe-layer = " \
+LAYERDEPENDS_xenclient-oe = " \
     meta-openxt-haskell-platform \
     selinux \
     intel \
