--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -43,7 +43,7 @@ PREFERRED_VERSION_webkit-gtk = "1.8.3"
 PREFERRED_VERSION_fontsproto = "2.1.3"
 PREFERRED_VERSION_gnome-keyring = "2.32.1"
 
-PREFERRED_VERSION_refpolicy-mcs = "2.20141203"
+PREFERRED_PROVIDER_iasl = "iasl"
 
 # Select our preferred providers
 PREFERRED_PROVIDER_sysvinit-inittab = "sysvinit"
