distro: Add PAM to features.
Silence:
WARNING: libpam-1.3.0-r5 do_pam_sanity: Building libpam but 'pam' isn't in DISTRO_FEATURES, PAM won't work correctly

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -21,7 +21,7 @@ PREFERRED_VERSION_linux-openxt ?= "4.14%"
 
 # Down the road this should probably be a machine config thing so it is possible
 # to have images that do not include selinux
-DISTRO_FEATURES_append += "selinux multiarch"
+DISTRO_FEATURES_append += "pam selinux multiarch"
 
 PREFERRED_VERSION_linux-libc-headers ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
 PREFERRED_VERSION_linux-libc-headers-nativesdk ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
