libtirpc: Upgrade to OE version 1.0.1.
There are incompatibilities with newer glibc and older libtirpc. Some
symbols have moved from one to the other.

Also, no need to keep an old version around.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -47,6 +47,8 @@ PREFERRED_PROVIDER_iasl = "iasl"
 
 PREFERRED_VERSION_refpolicy-mcs = "2.20170204"
 
+PREFERRED_VERSION_libtirpc = "1.0.1"
+
 # Select our preferred providers
 PREFERRED_PROVIDER_sysvinit-inittab = "sysvinit"
 PREFERRED_PROVIDER_virtual/java-initial = "cacao-initial"
