distro: Remove zeroconf from DISTRO_FEATURES.
OpenXT does not define a zeroconf recipe nor use avahi-daemon.
Remove zeroconf to reflect that.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -19,8 +19,14 @@
 PREFERRED_PROVIDER_virtual/kernel = "linux-openxt"
 PREFERRED_VERSION_linux-openxt ?= "4.14%"
 
+# openembedded-core sets a default list of DISTRO_FEATURES that do not match
+# OpenXT's machine needs.
+# See: openembedded-core/meta/conf/distro/include/default-distrovars.inc 
+# Another way would be hard setting DISTRO_FEATURES.
+# Another way wouwld be to redefine DISTRO_FEATURES_DEFAULT.
 # Down the road this should probably be a machine config thing so it is possible
 # to have images that do not include selinux
+DISTRO_FEATURES_remove = "zeroconf"
 DISTRO_FEATURES_append += "pam selinux multiarch"
 
 PREFERRED_VERSION_linux-libc-headers ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
