distro: Move local.conf PREFERRED to distro.
DISTRO mainly deals with PREFERRED providers and version statement. This
should not stay in local.conf.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -16,9 +16,6 @@
 # require conf/sanity.conf
 #
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-openxt"
-PREFERRED_VERSION_linux-openxt ?= "4.14%"
-
 # openembedded-core sets a default list of DISTRO_FEATURES that do not match
 # OpenXT's machine needs.
 # See: openembedded-core/meta/conf/distro/include/default-distrovars.inc 
@@ -29,14 +26,35 @@ PREFERRED_VERSION_linux-openxt ?= "4.14%"
 DISTRO_FEATURES_remove = "zeroconf"
 DISTRO_FEATURES_append += "pam selinux multiarch"
 
+# Use OpenXT Linux patched kernel.
+PREFERRED_PROVIDER_virtual/kernel = "linux-openxt"
+PREFERRED_VERSION_linux-openxt ?= "4.14%"
+# Align linux-libc-headers with the preferred kernel version.
 PREFERRED_VERSION_linux-libc-headers ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
 PREFERRED_VERSION_linux-libc-headers-nativesdk ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
 
+# Dojosdk preferred version.
 PREFERRED_VERSION_dojosdk-native ?= "1.7.2"
 # ${MACHINE}.conf is overriden by ${DISTRO}.conf
 # xenmgr_data and sync-wui (uivm and syncui machines) apparently depends on
 # different versions, so preserve that.
 PREFERRED_VERSION_dojosdk-native_xenclient-syncui ?= "1.8.1"
+
+# Prefer openssl to libressl.
+PREFERRED_PROVIDER_openssl = "openssl"
+PREFERRED_PROVIDER_openssl-native = "openssl-native"
+PREFERRED_PROVIDER_openssl-conf = "openssl-conf"
+PREFERRED_PROVIDER_nativesdk-openssl = "nativesdk-openssl"
+PREFERRED_PROVIDER_nativesdk-openssl-conf = "nativesdk-openssl-conf"
+# Prefer libcrypto and libssl to alternatives.
+PREFERRED_PROVIDER_libcrypto = "libcrypto"
+PREFERRED_PROVIDER_libssl = "libssl"
+
+# Prefer console-tools to kbd.
+PREFERRED_PROVIDER_console-tools = "console-tools"
+
+# Prefer libx11 to libx11-diet.
+PREFERRED_PROVIDER_virtual/libx11 = "libx11"
 
 # Force specific package versions
 PREFERRED_VERSION_grub = "2.00+AUTOINC%"
