uivm: Add upstream layers and upgrade nm-applet.
nm-applet is maintained upstream, so no need to keep a duplicated
recipe. This brings forward the layer configuration as being incomplete,
so add the missing meta-gnome and meta-xfce to the fold.

Also set the preferred nm-applet version to the distro.conf.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,10 +21,16 @@ LAYERVERSION_xenclient-oe = "1"
 LICENSE_PATH += " ${LAYERDIR}/files/additional-licenses/"
 
 LAYERDEPENDS_xenclient-oe = " \
+    virtualization-layer \
     meta-openxt-haskell-platform \
+    meta-openxt-ocaml-platform \
     selinux \
-    intel \
     meta-java \
+    intel \
+    gnome-layer \
+    xfce-layer \
+    networking-layer \
     meta-python \
+    openembedded-layer \
     core \
 "
