Switch dom0 and stubdoms to 64 bits
Signed-off-by: Jed <lejosnej@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -21,7 +21,7 @@ PREFERRED_VERSION_linux-openxt ?= "4.9%"
 
 # Down the road this should probably be a machine config thing so it is possible
 # to have images that do not include selinux
-DISTRO_FEATURES_append += "selinux"
+DISTRO_FEATURES_append += "multiarch selinux"
 
 PREFERRED_VERSION_linux-libc-headers ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
 PREFERRED_VERSION_linux-libc-headers-nativesdk ?= "${@"${PREFERRED_VERSION_linux-openxt}".rstrip('%')}"
@@ -44,6 +44,8 @@ PREFERRED_VERSION_fontsproto = "2.1.3"
 PREFERRED_VERSION_gnome-keyring = "2.32.1"
 
 PREFERRED_VERSION_refpolicy-mcs = "2.20141203"
+
+PREFERRED_VERSION_xen = "${XEN_VERSION}"
 
 # Select our preferred providers
 PREFERRED_PROVIDER_sysvinit-inittab = "sysvinit"
