--- a/conf/machine/xenclient-dom0.conf
+++ b/conf/machine/xenclient-dom0.conf
@@ -4,6 +4,8 @@
 #@NAME: xenclient-dom0
 #@DESCRIPTION: Machine configuration for XenClient dom0 VM
 
+DEFAULTTUNE = "core2-64"
+
 require xenclient-common.conf
 
 # set empty provider for initscripts as they are different for installer and dom0
