--- a/conf/machine/xenclient-stubdomain.conf
+++ b/conf/machine/xenclient-stubdomain.conf
@@ -4,6 +4,8 @@
 #@NAME: xenclient-stubdomain
 #@DESCRIPTION: Machine configuration for XenClient stubdomain VM
 
+DEFAULTTUNE = "core2-64"
+
 require xenclient-common.conf
 
 MACHINE_FEATURES = "kernel26 screen keyboard ethernet pci acpi ext2 x86"
