--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -58,8 +58,8 @@ PREFERRED_PROVIDER_virtual/libx11 = "libx11"
 
 # Force specific package versions
 PREFERRED_VERSION_grub = "2.00+AUTOINC%"
-PREFERRED_VERSION_networkmanager = "1.4.4"
-PREFERRED_VERSION_network-manager-applet = "1.4.4"
+PREFERRED_VERSION_networkmanager = "0.9.8.%"
+PREFERRED_VERSION_network-manager-applet = "${PREFERRED_VERSION_networkmanager}"
 PREFERRED_VERSION_wpa-supplicant = "2.6"
 
 PREFERRED_VERSION_webkitgtk = "2.12.5"
