distro: Use fs-perms.txt files for openxt-main.
This file should be used across machines/images of the openxt-main
distro.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -88,5 +88,7 @@ MULTI_PROVIDER_WHITELIST += "xen-xenstored"
 # OCaml xenstored is provided by the xen-libxl.bb recipe, so "xen-libxl"
 PREFERRED_PROVIDER_xen-xenstored = "xen"
 
+FILESYSTEM_PERMS_TABLES = "files/openxt-fs-perms.txt"
+
 # Set our root home
 ROOT_HOME = "/root"
