distro: Use fs-perms.txt files for openxt-main.
This file should be used across machines/images of the openxt-main
distro.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -91,6 +91,8 @@ PREFERRED_PROVIDER_xen-xenstored = "xen"
 # rpcgen staging and install paths.
 require xc-rpcgen.inc
 
+FILESYSTEM_PERMS_TABLES = "files/openxt-fs-perms.txt"
+
 # Set our root home
 ROOT_HOME = "/root"
 
