layer: Amend comment on BBMASK in layer.conf.
Although that variable might be better off in layer.conf, this is tied
to how the openxt layer handles its images. Strong variable assignment
might not be the best here as it implies other will have to:
BBMASK .= "|.*<stuff>"

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,7 +1,10 @@
 # We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# meta-selinux tries to sed checkroot.sh which we don't have in initscripts
+# meta-selinux appends populate-volatiles.sh with commands that will not work
+# under a read-only rootfs:
+# - liberaly restorecon /var/lib
+# - sed checkroot.sh
 BBMASK = "meta-selinux/recipes-core/initscripts/"
 
 # We have a recipes directory, add to BBFILES
