--- a/conf/machine/xenclient-common.conf
+++ b/conf/machine/xenclient-common.conf
@@ -3,3 +3,5 @@
 
 # Tune for Core 2 CPU
 require conf/machine/include/tune-core2.inc
+TUNE_CCARGS_remove += "-msse3 -mfpmath=sse"
+TUNE_CCARGS += "-mno-sse"
