--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -64,6 +64,8 @@ PREFERRED_VERSION_wpa-supplicant = "2.6"
 
 PREFERRED_VERSION_webkitgtk = "2.12.5"
 
+PREFERRED_VERSION_surf = "0.7"
+
 PREFERRED_VERSION_fontsproto = "2.1.3"
 PREFERRED_VERSION_gnome-keyring = "2.32.1"
 
