xenstored: Resolve xen tools entanglement to OCAML
Something got lost or broken somewhere and providers and
runtime-providers are now confused.

Without these change, both xen.bb and xen-ocaml-libs.bb provide
xen-xenstored, which is in images RDEPENDS. Both end up being built,
which will drag the OCAML cross toolchain in the mix. That last point is
troublesome, as the OCAML cross toolchain does not really handle
cross-compilation right and can only target similar architecture.

A RDEPEND on a xen-<tool> will suffice to trigger bitbake to provide
xen-xenstored in the mix.

It is also wasteful to build the two xenstored daemon everytime.

Instead, have an RPROVIDE statement for each package providing xenstored
and alias each recipe providing it with PROVIDE so the desired xenstored
daemon can be chosen at distro or configuration level.

In the end, to avoid warnings from OE for having multiple RPROVIDERS,
mask the upstream meta-virtualization recipe. This layer only use the
include files anyway.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -83,12 +83,9 @@ PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
 PREFERRED_PROVIDER_virtual/javac-native = "ecj-bootstrap-native"
 PREFERRED_PROVIDER_jpeg-native = "jpeg-native"
 
-# Allow build of multiple packages containing xenstore daemons
-MULTI_PROVIDER_WHITELIST += "xen-xenstored"
-# Select a preferred XenStored daemon implementation.
-# C xenstored is provided by the xen.bb recipe, so "xen"
-# OCaml xenstored is provided by the xen-libxl.bb recipe, so "xen-libxl"
-PREFERRED_PROVIDER_xen-xenstored = "xen"
+# Set the preferred version to c-xenstored.
+# xen-xenstored-c is a PROVIDE alias to xen.bb.
+PREFERRED_PROVIDER_xen-xenstored = "xen-xenstored-c"
 
 # rpcgen staging and install paths.
 require xc-rpcgen.inc
