--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,10 @@ BBPATH .= ":${LAYERDIR}"
 # under a read-only rootfs:
 # - liberaly restorecon /var/lib
 # - sed checkroot.sh
-BBMASK = "meta-selinux/recipes-core/initscripts/"
+BBMASK = " \
+    meta-selinux/recipes-core/initscripts/ \
+    meta-virtualization/recipes-extended/xen/xen_.*\.bb \
+"
 
 # We have a recipes directory, add to BBFILES
 BBFILES += " \
