openxt-installer: Make the machine core2-64.
Since it builds a 64bit kernel, it might as well be 64bit entirely and
provide the right libc for 64bit userland components.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/conf/machine/openxt-installer.conf
+++ b/conf/machine/openxt-installer.conf
@@ -5,6 +5,15 @@
 #@NAME: openxt-installer
 #@DESCRIPTION: Machine configuration for OpenXT installer
 
+# The OCAML layer will not work for this machine on a i.86 HOST.
+# ocaml-cross-x86_64:do_configure will use OCAML ./configure script which will
+# use gcc-cross-x86_64 to build samples in order to probe for compiler
+# capabilities (see config/auto-aux/runtest in ocaml sources).
+# This will to run on the jessie i686 build environment recommended for OpenXT
+# as there is no /lib/ld-linux.so.2 capable of running x86_64 programs (attemps
+# will fail with `No such file or directory').
+DEFAULTTUNE = "core2-64"
+
 require xenclient-common.conf
 
 # set empty provider for initscripts as they are different for installer and dom0
