--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -70,10 +70,9 @@ PREFERRED_VERSION_fontsproto = "2.1.3"
 PREFERRED_VERSION_gnome-keyring = "2.32.1"
 
 PREFERRED_PROVIDER_iasl = "iasl"
+PREFERRED_PROVIDER_iasl-native = "${PREFERRED_PROVIDER_iasl}-native"
 
 PREFERRED_VERSION_refpolicy-mcs = "2.20170204"
-
-PREFERRED_VERSION_libtirpc = "1.0.1"
 
 # Select our preferred providers
 PREFERRED_PROVIDER_sysvinit-inittab = "sysvinit"
