--- a/conf/machine/xenclient-ndvm.conf
+++ b/conf/machine/xenclient-ndvm.conf
@@ -8,4 +8,6 @@ require xenclient-common.conf
 
 MACHINE_FEATURES = "kernel26 ethernet pci ext2 x86"
 
+KERNEL_CMDLINE = "root=/dev/xvda2 ro console=hvc0 iommu=soft"
+
 USE_VT = "0"
