Move KERNEL_IMAGETYPE to machine/xenclient-common.conf
KERNEL_IMAGETYPE is useful in image recipes in addition to the kernel
one.  By convention, it is machine-specific, and since it is shared
across all our machine types, move it into the common conf.

OXT-1327

Signed-off-by: Jason Andryuk <jandryuk@gmail.com>

--- a/conf/machine/xenclient-common.conf
+++ b/conf/machine/xenclient-common.conf
@@ -12,3 +12,5 @@ require conf/machine/include/tune-core2.inc
 # components.
 # The trade off with -mstackrealign should be less than disabling SSE.
 TUNE_CCARGS += "-mstackrealign"
+
+KERNEL_IMAGETYPE = "bzImage"
