Remove some unnecessary distro features
Signed-off-by: Jed <lejosnej@ainfosec.com>

--- a/conf/machine/xenclient-ndvm.conf
+++ b/conf/machine/xenclient-ndvm.conf
@@ -6,6 +6,8 @@
 
 require xenclient-common.conf
 
+DISTRO_FEATURES_remove += "x11"
+
 MACHINE_FEATURES = "kernel26 ethernet pci ext2 x86"
 
 KERNEL_CMDLINE = "root=/dev/xvda2 ro console=hvc0 iommu=soft"
