--- a/conf/distro/openxt-main.conf
+++ b/conf/distro/openxt-main.conf
@@ -23,7 +23,7 @@
 # Another way wouwld be to redefine DISTRO_FEATURES_DEFAULT.
 # Down the road this should probably be a machine config thing so it is possible
 # to have images that do not include selinux
-DISTRO_FEATURES_remove = "zeroconf"
+DISTRO_FEATURES_remove += "zeroconf bluetooth irda nfs nfc usbgadget ipv6"
 DISTRO_FEATURES_append += "pam selinux multiarch"
 
 # Use OpenXT Linux patched kernel.
