Remove some unnecessary distro features
Signed-off-by: Jed <lejosnej@ainfosec.com>

--- a/conf/machine/xenclient-dom0.conf
+++ b/conf/machine/xenclient-dom0.conf
@@ -6,6 +6,8 @@
 
 require xenclient-common.conf
 
+DISTRO_FEATURES_remove += "3g wifi"
+
 # set empty provider for initscripts as they are different for installer and dom0
 # which share the same machine and require different initscritpts
 # therefore for every machine using dom0 arch initscripts have to
